# mpasviewer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: 00_geneal_use.ipynb  01_projection.ipynb  02_static.ipynb  03_out.ipynb  04_widget.ipynb  05_out_wofs.ipynb  06_graf15m.ipynb  07_graf05m.ipynb  08_out_ocean.ipynb  09_out_seaice.ipynb  10_out_chem.ipynb  11_out_mpas-jedi-diag.ipynb  11_out_mpas-jedi.ipynb  12_out_mpas-jedi-out.ipynb  13_out_mpas-jedi-da_an.ipynb  14_out_mpas-jedi-da_bg.ipynb  15_static_hydro.ipynb  16_remote_01.ipynb  16_remote_02.ipynb  16_remote_static_global.ipynb  17_field_difference.ipynb  17_remote_out_nyc.ipynb  18_remote_out_PR.ipynb  18_wind_vectors.ipynb  19_s3_subset_pipeline.ipynb  graf_zarr.py
src/mpasviewer/: __init__.py  main.py  statics.py
src/mpasviewer/.ipynb_checkpoints/: main-checkpoint.py
